2016-04-20  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2665: icedtea/jamvm 2.6 fails as a
	build VM for icedtea
	* Makefile.am:
	(ICEDTEA_PATCHES): Add new patch.
	* NEWS: Updated.
	* patches/jamvm/pr2665.patch:
	Set the classLoader field in java.lang.Class
	when a class is defined.

2016-04-17  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	Bump to icedtea-2.6.6pre01.
	* Makefile.am:
	(CORBA_CHANGESET): Update to icedtea-2.6.6pre01.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	* NEWS: Updated.
	* configure.ac: Bump to 2.6.6pre01.
	* hotspot.map.in: Update to icedtea-2.6.6pre01.

2016-04-14  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Add 2.6.6 section.
	* configure.ac: Bump to 2.6.6pre00.

2016-03-25  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Replace misplaced '.' with ','.

2016-03-24  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Set release date.

2016-03-24  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	Bump to icedtea-2.6.5.
	* INSTALL: Update X11 dependency documentation.
	* Makefile.am:
	(JDK_UPDATE_VERSION): Bump to 99.
	(CORBA_CHANGESET): Update to icedtea-2.6.5.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	* NEWS: Updated.
	* configure.ac: Bump to 2.6.5. Add check
	for libXcomposite as required by fix
	for PR2866. Correct variables used by
	xproto check.
	* hotspot.map.in: Update to icedtea-2.6.5.